[gd_scene load_steps=5 format=3 uid="uid://bpcbxjl0n1xii"]

[ext_resource type="Script" uid="uid://cpbhfu6q1fhge" path="res://Scripts/hud.gd" id="1_health"]
[ext_resource type="Texture2D" uid="uid://dg58perboedy8" path="res://Assets/sprites/hud_heartFull.png" id="2_heart_full"]
[ext_resource type="Texture2D" uid="uid://bvqp7trpq6axt" path="res://Assets/sprites/hud_heartEmpty.png" id="3_heart_empty"]

[sub_resource type="LabelSettings" id="LabelSettings_bjfho"]
font_size = 48
font_color = Color(0.901961, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_health")
heart_full_texture = ExtResource("2_heart_full")
heart_empty_texture = ExtResource("3_heart_empty")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="DeathScreen" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="UI/DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DeathScreen/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="YouDiedLabel" type="Label" parent="UI/DeathScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_bjfho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpacerTop" type="Control" parent="UI/DeathScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="UI/DeathScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "RESTART"

[node name="QuitButton" type="Button" parent="UI/DeathScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "MAIN MENU"
